incorrect timestamps in netscaler capture file format
This issue was migrated from bug 3540 in our old bug tracker.
Original bug information:
Reporter: Devesh Prakash
Status: RESOLVED FIXED
Product: Wireshark
Component: Capture file support (libwiretap)
OS: All
Platform: All
Version: unspecified
Attachments:
patch_nstimestamp_v23: It fixes the timestamp problem in netscaler wireshark.
patch_nstimestamp_v23: It fixes the timestamp problem in netscaler wireshark.
patch_nstimestamp_v23: It fixes the timestamp problem in netscaler wireshark.
patch_nstimestamp_v23: It fixes the timestamp problem in netscaler wireshark.
patch_nstimestamp_v23: It fixes the timestamp problem in netscaler wireshark. ....previous patches faced some corruption. so attaching this new one.
a.diff: treat the two 32bit time values (low, high) in v23 format as a 64bit value.
netscaler.patch: patch to not trigger strict-aliasing warning message in typecasting a guint32* into a guint64*
nstrace5_v23.cap: The new format v23 file with timestamps around 2009-11-18 06:08:00
working.patch: host endian-ness independent netscaler wiretap code