From Ravi Kondamuru via bug 3540: Treat the two 32bit time values (low, high) in v23 format as a 64bit value.

svn path=/trunk/; revision=30994